--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "guohaomin.png"
+  name             : "Haomin Guo"
+  pronouns         : "he/his" # example: "she/her"  
+  bio              : "postgraduate student, Zhejiang University"
+  location         : "Hangzhou China"
+  employer         : "Zhejiang University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "guohaomin123@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
