--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Haomin Guo/Personal Homepage"
+title                    : "Haomin Guo"
 title_separator          : "-"
 name                     : &name "Haomin Guo"
 description              : &description "postgraduate student, Zhejiang University"
