--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "postgraduate student, Zhejiang University"
   location         : "Hangzhou China"
-  employer         : "Zhejiang University"
+  employer         :
   uri              : # URL
   email            : "guohaomin123@gmail.com" 
 
